Update avec notamment cv pdf

--- a/src/015-intro.html
+++ b/src/015-intro.html
@@ -9,7 +9,7 @@ $base64 = base64_encode(file_get_contents(__DIR__.'/assets/img/moi-micro.jpg'));
 			<h3 class="h3 g-mb-15">
 			<a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover" href="#">
 				Antoine Viau<br />
-				Architecte / Software Engineer<br />
+				Senior Architecte / Software Engineer<br />
 				Freelance
 			</a>
 			</h3>
@@ -21,10 +21,10 @@ $base64 = base64_encode(file_get_contents(__DIR__.'/assets/img/moi-micro.jpg'));
 			</div>
 			<!-- End Article Info -->
 			<!-- Article Text -->
-			<p class="text-justify">
+			<p class="text-justify no-print">
 				Je suis avant tout passionné par mon métier. Mon récent domaine d'expertise était essentiellement Angular, mais je ne me limite pas au front-end.<br />
-				Mes compétences sont full-stack et architecturale, tant au niveau de startups, que de grands groupes.<br />
-				J'ai une approche <strong>craftmanship</strong> : j'aime délivrer du bon et beau code. Je crois en la qualité comme gage de pérennité et je cherche constamment à m'améliorer, notamment en travaillant avec d'autres (je suis adepte du peer-programming).<br />
+				Mes compétences sont full-stack et architecturales, tant pour des startups, que pour des grands groupes.<br />
+				J'ai une approche <strong>craftmanship</strong> : j'aime délivrer du bon et beau code et mettre en place des architectures logiciels et ops qui soient bien construites. Je crois en la qualité comme gage de pérennité et je cherche constamment à m'améliorer, notamment en travaillant avec d'autres (je suis adepte du peer-programming).<br />
 				Par ailleurs, j'ai plaisir à faire des <a href="#confs">talks</a> sur des sujets techniques. Je suis donc ouvert aux offres de meetups et conférences.
 			</p>
 			<p>
@@ -32,13 +32,14 @@ $base64 = base64_encode(file_get_contents(__DIR__.'/assets/img/moi-micro.jpg'));
 				contact@antoineviau.com<br />
 				<a href="https://www.linkedin.com/in/antoine-viau-6ba9b610">
 					https://www.linkedin.com/in/antoine-viau-6ba9b610
-				</a>
+				</a><br />
+				<a href="cv-antoine-viau.pdf" class="btn btn-md u-btn-indigo g-mr-10 g-mb-15 g-mt-15 no-print">CV au format PDF</a>
 			</p>
 			<!-- End Article Text -->
 		</div>
 		<!-- End Article Content -->
 		<!-- Article Image -->
-		<div class="col-md-5 text-center g-pt-60">
+		<div class="col-md-5 text-center g-pt-100">
 			<img
 			class="img-fluid w-70 g-mb-20 g-mb-0--md"
 			src="data:image/jpeg;base64, <?=$base64?>" alt="Antoine Viau">
