--- a/src/100-projects.html
+++ b/src/100-projects.html
@@ -1,8 +1,9 @@
 <style>
     @media print
     {
-    	project h3 {
+    	.project .h5 a {
     		font-size: 1.25rem !important;
+    		color: #000000;
     	}
     }
 </style>
@@ -37,7 +38,7 @@ function project($project)
 	<div class="project row g-mb-20">		
 	  <div class="col-md-6 g-mb-0--lg text-center no-print">
 	  	<a href="$project->link">
-	    <img class="img-fluid g-pl-70 g-pr-70 no-print" 
+	    <img class="img-fluid g-brd-around g-brd-gray-light-v1 no-print" 
 	    src="data:image/jpeg;base64, $base64"
 	    alt="Antoine Viau, projet $project->title"
 	    >
