Avant grand nettoyage suite à bascule vers twig.

--- a/src/060-diplomes.html
+++ b/src/060-diplomes.html
@@ -12,7 +12,7 @@ Mention très bien<br />"
 
 panel(
 'Amazon Web Services',
-'Certifié Amazon Web Services Solutions Architect',
+'Certifié Amazon Web Services Solutions Architect (2019)',
 'Score : 973/1000<br />'
 );
 
